--- a/index.html
+++ b/index.html
@@ -1,43 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css" />
     <title>choco-pizza-</title>
 </head>
+
 <body>
-   <header>
-<div>
-    <img src="img/logo.png" alt="">
-    <p>Delicious</p>
-    <p> The Best Food Blog On The Web </p>
-</div>
-<div>
-    <img src="img/fb-icon.png" alt="">
-    <img src="img/twit-icon.png" alt="">
-    <img src="img/gp-icon.png" alt="">
-    <img src="img/insta-icon.png" alt="">
-    <img src="img/flic-icon.png" alt="">
-    <img src="img/pint-icon.png" alt="">
-    <img src="img/rss-icon.png" alt="">
-    <img src="img/mail-icon.png" alt="">
-   
-</div>
-  </header> 
-   <main>
+    <header>
 
 
 
-   </main>
-   <footer>
+        <img src="img/logo.png" alt="">
+        <article>
+            <h2>Delicious</h2>
+            <p> The Best Food Blog On The Web </p>
+        </article>
+        <div>
+
+            <img src="img/twit-icon.png" alt="">
+            <img src="img/gp-icon.png" alt="">
+            <img src="img/insta-icon.png" alt="">
+            <img src="img/flic-icon.png" alt="">
+            <img src="img/pint-icon.png" alt="">
+            <img src="img/rss-icon.png" alt="" id="move">
+            <img src="img/mail-icon.png" alt="">
+
+        </div>
+        <hr>
+        </hr>
+    </header>
+    <main>
+        <h1>Choclate Pizza</h1>
+        <div>
+            <p>POSTED ON 15 DEC 2013 DESSERTS</p>
+
+            <img src="img/print-icon.png" alt="">
+        </div>
+        <img src="img/choco-pizza.png" alt="" width="1500px">
 
 
-   </footer>
+        <article>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo delectus voluptate aliquam placeat sint
+                voluptates cupiditate hic inventore, modi voluptatum molestiae totam unde expedita aspernatur ipsum
+                suscipit sapiente autem blanditiis!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, odio distinctio. Accusantium hic mollitia
+                porro culpa maiores, non corporis cumque, quis quibusdam at vel, debitis blanditiis inventore aut alias
+                optio?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quaerat doloremque consectetur
+                nesciunt, optio et. Accusamus, aut dicta, fuga aspernatur consequatur in, ratione exercitationem
+                architecto atque sed quisquam velit ipsum.</p>
+
+        </article>
+
+        <section>
+            <form action='' id='myform'>
+                <fieldset>
+                    <legend> </legend>
+                    <div id="first">
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+
+                        <br>
+                        <input type="checkbox" id="minform" name="min" placeholder="minimize number" />
+                        <label for="checkbox"> 1 1/2 </label>
+                        <br>
+
+                        <input type="checkbox" id="maxform" name="max" placeholder="maximize number" />
+                        <label for="maxform"> Max number:</label>
+
+                        <br>
+
+                        <input type="checkbox" step="0.01" id="avrageform" name="avrage1" placeholder="Avarge number" />
+                        <label for="avrageform"> Avarge Number:</label>
+                        <br>
+
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+                        <br>
+
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+                    </div>
+
+
+                    <div id="sec">
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+                        <br>
+
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+                        <br>
+
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+                        <br>
+
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+                        <br>
+
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+                        <br>
+
+                        <input type="checkbox" placename" name="placenames" placeholder="New place name" />
+                        <label for="minform"> 1 1/2 </label>
+
+                    </div>
+
+
+
+                </fieldset>
+
+            </form>
+
+        </section>
+        <hr>
+        </hr>
+
+
+        <img src="img/van-pic.png" alt="" class="van" >          
+
+      
+        <h3 class="van" >Vanessa Stevenson</h3>
+
+<p id="p"> jgbkjbkjcdklvjdklsvjlkdjvlskjvslkmcslkvmslkcsjlkcvnsklvnsklvhnjskcvnskvnkslnsklnvkldzncvskzlncskzlcns</p>
+
+       
+     <button>jhjk</button>
+
+
+
+    </main>
+    <footer>
+
+
+    </footer>
 
 </body>
 <script src="js/app.js"></script>
+
 </html>
