--- a/index.html
+++ b/index.html
@@ -48,17 +48,22 @@
 
 
         <article>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo delectus voluptate aliquam placeat sint
-                voluptates cupiditate hic inventore, modi voluptatum molestiae totam unde expedita aspernatur ipsum
-                suscipit sapiente autem blanditiis!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, odio distinctio. Accusantium hic mollitia
-                porro culpa maiores, non corporis cumque, quis quibusdam at vel, debitis blanditiis inventore aut alias
-                optio?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quaerat doloremque consectetur
-                nesciunt, optio et. Accusamus, aut dicta, fuga aspernatur consequatur in, ratione exercitationem
-                architecto atque sed quisquam velit ipsum.</p>
+            <p >For the fig-swirl : Melt butter over mediumheat in a saucepan  .  Add brown sugar and stir to dissolve .   Halve all of the figs and toss in the  saucepan with water and lemon juice .Cook overmedium heat , stirring frequently , until 
+            you have a chunky-jammy mixture .  Add salt with one or two stirs, set aside and let cool completely. </p>
 
-        </article>
+
+            <p>Ice cream : In a small pot over medium heat , combine milk , and granulated sugar until sugar is complettely 
+            dissolved and milk is just barely lukewarm . Whisk in the egg yolks . Set mixture in the frigge and wait until the fig mixture is cooled.</p>
+
+
+            <p>Using an ice cream machine , pour liquids into the frozen basin and process according to manufacturer
+            instructions,i.e., let spin and thicken for 20 minutes before adding mascarpone , fig jam mixture , and the nuts. 
+            Continue to process for +/- 10 minutes . Pour semi-frozen mixture into apyrex dish or glass tupperware .Freeze for
+             at least two hours before serving. 
+
+
+
+</article>
 
         <section>
             <form action='' id='myform'>
@@ -140,7 +145,7 @@
 <p id="p">Food enthusiast , photography fan . Add a pinch of raw foodism and thats <br>pretty much who I am</p>
 
        
-     <button>SHARE </button>
+     <button>SHARE RECIPE </button>
 
 
 
