--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <h2>Delicious</h2>
             <p> The Best Food Blog On The Web </p>
         </article>
-        <div>
+        <div id="move">
 
             <img src="img/twit-icon.png" alt="">
             <img src="img/gp-icon.png" alt="">
             <img src="img/insta-icon.png" alt="">
             <img src="img/flic-icon.png" alt="">
             <img src="img/pint-icon.png" alt="">
-            <img src="img/rss-icon.png" alt="" id="move">
+            <img src="img/rss-icon.png" alt="">
             <img src="img/mail-icon.png" alt="">
 
         </div>
@@ -133,19 +133,18 @@
             </form>
 
         </section>
-        <hr>
-        </hr>
+        <hr id="secondhr">  </hr>
 
 
-        <img src="img/van-pic.png" alt="" class="van" >          
+       <img src="img/van-pic.png" alt="" id="vanpic" >           
 
       
-        <h3 class="van" >Vanessa Stevenson</h3>
+        <h3  >Vanessa Stevenson</h3>
 
 <p id="p">Food enthusiast , photography fan . Add a pinch of raw foodism and thats <br>pretty much who I am</p>
 
        
-     <button>SHARE RECIPE </button>
+     <button>SHARE RECIPE </button> 
 
 
 
