--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 
 
         <article>
-            <p >For the fig-swirl : Melt butter over mediumheat in a saucepan  .  Add brown sugar and stir to dissolve .   Halve all of the figs and toss in the  saucepan with water and lemon juice .Cook overmedium heat , stirring frequently , until 
+            <p >For the fig-swirl : Melt butter over mediumheat in a saucepan  .  Add brown sugar and stir to dissolve .   Halve all of the figs and toss in the  saucepan with water and lemon juice .Cook overmedium <br><br>heat , stirring frequently , until 
             you have a chunky-jammy mixture .  Add salt with one or two stirs, set aside and let cool completely. </p>
 
 
             <p>Ice cream : In a small pot over medium heat , combine milk , and granulated sugar until sugar is complettely 
-            dissolved and milk is just barely lukewarm . Whisk in the egg yolks . Set mixture in the frigge and wait until the fig mixture is cooled.</p>
+            dissolved and milk is just barely lukewarm . Whisk in the egg yolks . Set mixture in the <br><br>frigge and wait until the fig mixture is cooled.</p>
 
 
             <p>Using an ice cream machine , pour liquids into the frozen basin and process according to manufacturer
-            instructions,i.e., let spin and thicken for 20 minutes before adding mascarpone , fig jam mixture , and the nuts. 
+            instructions,i.e., let spin and thicken for 20 minutes before adding mascarpone , fig jam<br><br> mixture , and the nuts. 
             Continue to process for +/- 10 minutes . Pour semi-frozen mixture into apyrex dish or glass tupperware .Freeze for
              at least two hours before serving. 
 
